Fase H: migrar los 8 examples a Jakarta EE 10 / Faces 4.0 / JDK 21
Migra los 8 examples de RichFaces (template, push-demo, standalone-js, irc-client, jpa-demo, components-demo, showcase, photoalbum) de javax a Jakarta EE 10; todos compilan y empaquetan en verde (WAR 5.0.0).

Transversal: @ManagedBean->@Named, scopes a jakarta.enterprise.context (@ViewScoped->jakarta.faces.view), @ManagedProperty->@Inject, beans Session/View Serializable; imports javax.*->jakarta.* (faces/enterprise/inject/ejb/annotation/validation/persistence/servlet/el/ws.rs/xml.bind), conservando javax del JDK; descriptores a jakarta.ee (web-app 6.0, faces-config 4.0 sin managed-bean, persistence 3.1, beans.xml CDI 4.0, facelet-taglib 4.0); xhtml a jakarta.faces.*/jakarta.tags.*; poms jboss-javaee-6/-web-6 -> jakarta.jakartaee[-web]-api:10.0.0.

showcase: pom reescrito a un unico WAR Jakarta (weld-servlet-shaded, hibernate-core 6.4.4, hsqldb 2.7.2, hibernate-validator 8, rewrite-servlet 10.0.2); eliminados perfiles multi-impl/contenedor/integration/browser y overlays webapp-*/resources-*; opBean1/opBean2 -> OutputPanelBeanProducer (CDI). photoalbum: javax.activation->jakarta.activation-api 2.1.3, Jackson 1.x->2, hibernate-annotations->hibernate-core 6 (retira @LazyCollection), @NotEmpty/@Email->jakarta.validation, javax.ws.rs->jakarta.ws.rs. Anexos 13.4/14.6: fuera -XX:MaxPermSize y stack Drone/PhantomJS/Graphene/Arquillian de showcase/photoalbum.

Prerrequisitos: version explicita en components/pom.xml (cdk:annotations) y build/resource-optimizer-plugin/pom.xml (javassist). Helper build/jakarta-transform/mvnbuild.cmd.